fix wrong scrollbar color

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -60,7 +60,7 @@ a {
 }
 
 *::-webkit-scrollbar-track {
-    background-color: var(--theme);
+    background-color: var(--color2);
     padding-bottom: 10px;
 }
 
